BackEnd/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    CADENA
    FS
    FS_VAL
    IGUAL
    LETRAS_FIT
    LETRA_MKDISK
    NUM

Grammar

Rule 0     S' -> comando
Rule 1     comando -> MKDISK atributosm
Rule 2     atributosm -> atributosm atributom
Rule 3     atributosm -> atributom
Rule 4     atributom -> GUION PATH DIR
Rule 5     atributom -> GUION FIT STRING
Rule 6     atributom -> GUION UNIT STRING
Rule 7     atributom -> GUION SIZE STRING
Rule 8     comando -> FDISK atributos
Rule 9     atributos -> atributos atributo
Rule 10    atributos -> atributo
Rule 11    atributo -> GUION PATH DIR
Rule 12    atributo -> GUION TYPE STRING
Rule 13    atributo -> GUION UNIT STRING
Rule 14    atributo -> GUION NAME STRING
Rule 15    atributo -> GUION SIZE STRING
Rule 16    atributo -> GUION FIT STRING
Rule 17    atributo -> GUION ADD STRING
Rule 18    atributo -> GUION DELETE
Rule 19    comando -> RMDISK GUION PATH DIR
Rule 20    comando -> MOUNT atributos_mount
Rule 21    atributos_mount -> atributos_mount atributo_mm
Rule 22    atributos_mount -> atributo_mm
Rule 23    atributo_mm -> GUION PATH DIR
Rule 24    atributo_mm -> GUION NAME STRING
Rule 25    comando -> UNMOUNT GUION ID STRING
Rule 26    comando -> MKFS atributos_mkfs
Rule 27    atributos_mkfs -> atributos_mkfs atributosSolo_mkfs
Rule 28    atributos_mkfs -> atributosSolo_mkfs
Rule 29    atributosSolo_mkfs -> GUION ID STRING
Rule 30    atributosSolo_mkfs -> GUION TYPE STRING
Rule 31    comando -> LOGIN atributos_login
Rule 32    atributos_login -> atributos_login atributosSolo_login
Rule 33    atributos_login -> atributosSolo_login
Rule 34    atributosSolo_login -> GUION USER STRING
Rule 35    atributosSolo_login -> GUION PASS STRING
Rule 36    atributosSolo_login -> GUION ID STRING
Rule 37    comando -> LOGOUT
Rule 38    comando -> MKGRP GUION NAME STRING
Rule 39    comando -> RMGRP GUION NAME STRING
Rule 40    comando -> MKUSR atributos_mkusr
Rule 41    atributos_mkusr -> atributos_mkusr atributosSolo_mkusr
Rule 42    atributos_mkusr -> atributosSolo_mkusr
Rule 43    atributosSolo_mkusr -> GUION USER STRING
Rule 44    atributosSolo_mkusr -> GUION PASS STRING
Rule 45    atributosSolo_mkusr -> GUION GRP STRING
Rule 46    comando -> RMUSR GUION USER STRING
Rule 47    comando -> MKFILE atributos_mkfile
Rule 48    atributos_mkfile -> atributos_mkfile atributosSolo_mkfile
Rule 49    atributos_mkfile -> atributosSolo_mkfile
Rule 50    atributosSolo_mkfile -> GUION PATH DIR
Rule 51    atributosSolo_mkfile -> GUION SIZE STRING
Rule 52    atributosSolo_mkfile -> GUION CONT STRING
Rule 53    atributosSolo_mkfile -> GUION R
Rule 54    comando -> CAT listaFilesCAT
Rule 55    listaFilesCAT -> listaFilesCAT atributosSolo_CAT
Rule 56    listaFilesCAT -> atributosSolo_CAT
Rule 57    atributosSolo_CAT -> GUION FILE2 STRING
Rule 58    atributosSolo_CAT -> GUION FILE1 STRING
Rule 59    comando -> REMOVE GUION PATH DIR
Rule 60    comando -> EDIT listas_edit
Rule 61    listas_edit -> listas_edit atributosSolo_EDIT
Rule 62    listas_edit -> atributosSolo_EDIT
Rule 63    atributosSolo_EDIT -> GUION PATH DIR
Rule 64    atributosSolo_EDIT -> GUION CONT DIR
Rule 65    comando -> RENAME lista_rename
Rule 66    lista_rename -> lista_rename atributosSolo_RENAME
Rule 67    lista_rename -> atributosSolo_RENAME
Rule 68    atributosSolo_RENAME -> GUION PATH DIR
Rule 69    atributosSolo_RENAME -> GUION NAME STRING
Rule 70    comando -> MKDIR lista_mkdir
Rule 71    lista_mkdir -> lista_mkdir atributosSolo_MKDIR
Rule 72    lista_mkdir -> atributosSolo_MKDIR
Rule 73    atributosSolo_MKDIR -> GUION PATH DIR
Rule 74    atributosSolo_MKDIR -> GUION R
Rule 75    comando -> COPY lista_copy
Rule 76    lista_copy -> lista_copy atributosSolo_COPY
Rule 77    lista_copy -> atributosSolo_COPY
Rule 78    atributosSolo_COPY -> GUION PATH DIR
Rule 79    atributosSolo_COPY -> GUION DESTINO DIR
Rule 80    comando -> EXECUTE GUION PATH DIR
Rule 81    comando -> REP lista_rep
Rule 82    lista_rep -> lista_rep atributosSolo_REP
Rule 83    lista_rep -> atributosSolo_REP
Rule 84    atributosSolo_REP -> GUION ID STRING
Rule 85    atributosSolo_REP -> GUION PATH DIR
Rule 86    atributosSolo_REP -> GUION NAME STRING
Rule 87    atributosSolo_REP -> GUION RUTA DIR
Rule 88    comando -> PAUSE

Terminals, with rules where they appear

ADD                  : 17
CADENA               : 
CAT                  : 54
CONT                 : 52 64
COPY                 : 75
DELETE               : 18
DESTINO              : 79
DIR                  : 4 11 19 23 50 59 63 64 68 73 78 79 80 85 87
EDIT                 : 60
EXECUTE              : 80
FDISK                : 8
FILE1                : 58
FILE2                : 57
FIT                  : 5 16
FS                   : 
FS_VAL               : 
GRP                  : 45
GUION                : 4 5 6 7 11 12 13 14 15 16 17 18 19 23 24 25 29 30 34 35 36 38 39 43 44 45 46 50 51 52 53 57 58 59 63 64 68 69 73 74 78 79 80 84 85 86 87
ID                   : 25 29 36 84
IGUAL                : 
LETRAS_FIT           : 
LETRA_MKDISK         : 
LOGIN                : 31
LOGOUT               : 37
MKDIR                : 70
MKDISK               : 1
MKFILE               : 47
MKFS                 : 26
MKGRP                : 38
MKUSR                : 40
MOUNT                : 20
NAME                 : 14 24 38 39 69 86
NUM                  : 
PASS                 : 35 44
PATH                 : 4 11 19 23 50 59 63 68 73 78 80 85
PAUSE                : 88
R                    : 53 74
REMOVE               : 59
RENAME               : 65
REP                  : 81
RMDISK               : 19
RMGRP                : 39
RMUSR                : 46
RUTA                 : 87
SIZE                 : 7 15 51
STRING               : 5 6 7 12 13 14 15 16 17 24 25 29 30 34 35 36 38 39 43 44 45 46 51 52 57 58 69 84 86
TYPE                 : 12 30
UNIT                 : 6 13
UNMOUNT              : 25
USER                 : 34 43 46
error                : 

Nonterminals, with rules where they appear

atributo             : 9 10
atributo_mm          : 21 22
atributom            : 2 3
atributos            : 8 9
atributosSolo_CAT    : 55 56
atributosSolo_COPY   : 76 77
atributosSolo_EDIT   : 61 62
atributosSolo_MKDIR  : 71 72
atributosSolo_RENAME : 66 67
atributosSolo_REP    : 82 83
atributosSolo_login  : 32 33
atributosSolo_mkfile : 48 49
atributosSolo_mkfs   : 27 28
atributosSolo_mkusr  : 41 42
atributos_login      : 31 32
atributos_mkfile     : 47 48
atributos_mkfs       : 26 27
atributos_mkusr      : 40 41
atributos_mount      : 20 21
atributosm           : 1 2
comando              : 0
listaFilesCAT        : 54 55
lista_copy           : 75 76
lista_mkdir          : 70 71
lista_rename         : 65 66
lista_rep            : 81 82
listas_edit          : 60 61

Parsing method: LALR

state 0

    (0) S' -> . comando
    (1) comando -> . MKDISK atributosm
    (8) comando -> . FDISK atributos
    (19) comando -> . RMDISK GUION PATH DIR
    (20) comando -> . MOUNT atributos_mount
    (25) comando -> . UNMOUNT GUION ID STRING
    (26) comando -> . MKFS atributos_mkfs
    (31) comando -> . LOGIN atributos_login
    (37) comando -> . LOGOUT
    (38) comando -> . MKGRP GUION NAME STRING
    (39) comando -> . RMGRP GUION NAME STRING
    (40) comando -> . MKUSR atributos_mkusr
    (46) comando -> . RMUSR GUION USER STRING
    (47) comando -> . MKFILE atributos_mkfile
    (54) comando -> . CAT listaFilesCAT
    (59) comando -> . REMOVE GUION PATH DIR
    (60) comando -> . EDIT listas_edit
    (65) comando -> . RENAME lista_rename
    (70) comando -> . MKDIR lista_mkdir
    (75) comando -> . COPY lista_copy
    (80) comando -> . EXECUTE GUION PATH DIR
    (81) comando -> . REP lista_rep
    (88) comando -> . PAUSE

    MKDISK          shift and go to state 2
    FDISK           shift and go to state 3
    RMDISK          shift and go to state 4
    MOUNT           shift and go to state 5
    UNMOUNT         shift and go to state 6
    MKFS            shift and go to state 7
    LOGIN           shift and go to state 8
    LOGOUT          shift and go to state 9
    MKGRP           shift and go to state 10
    RMGRP           shift and go to state 11
    MKUSR           shift and go to state 12
    RMUSR           shift and go to state 13
    MKFILE          shift and go to state 14
    CAT             shift and go to state 15
    REMOVE          shift and go to state 16
    EDIT            shift and go to state 17
    RENAME          shift and go to state 18
    MKDIR           shift and go to state 19
    COPY            shift and go to state 20
    EXECUTE         shift and go to state 21
    REP             shift and go to state 22
    PAUSE           shift and go to state 23

    comando                        shift and go to state 1

state 1

    (0) S' -> comando .



state 2

    (1) comando -> MKDISK . atributosm
    (2) atributosm -> . atributosm atributom
    (3) atributosm -> . atributom
    (4) atributom -> . GUION PATH DIR
    (5) atributom -> . GUION FIT STRING
    (6) atributom -> . GUION UNIT STRING
    (7) atributom -> . GUION SIZE STRING

    GUION           shift and go to state 26

    atributosm                     shift and go to state 24
    atributom                      shift and go to state 25

state 3

    (8) comando -> FDISK . atributos
    (9) atributos -> . atributos atributo
    (10) atributos -> . atributo
    (11) atributo -> . GUION PATH DIR
    (12) atributo -> . GUION TYPE STRING
    (13) atributo -> . GUION UNIT STRING
    (14) atributo -> . GUION NAME STRING
    (15) atributo -> . GUION SIZE STRING
    (16) atributo -> . GUION FIT STRING
    (17) atributo -> . GUION ADD STRING
    (18) atributo -> . GUION DELETE

    GUION           shift and go to state 29

    atributos                      shift and go to state 27
    atributo                       shift and go to state 28

state 4

    (19) comando -> RMDISK . GUION PATH DIR

    GUION           shift and go to state 30


state 5

    (20) comando -> MOUNT . atributos_mount
    (21) atributos_mount -> . atributos_mount atributo_mm
    (22) atributos_mount -> . atributo_mm
    (23) atributo_mm -> . GUION PATH DIR
    (24) atributo_mm -> . GUION NAME STRING

    GUION           shift and go to state 33

    atributos_mount                shift and go to state 31
    atributo_mm                    shift and go to state 32

state 6

    (25) comando -> UNMOUNT . GUION ID STRING

    GUION           shift and go to state 34


state 7

    (26) comando -> MKFS . atributos_mkfs
    (27) atributos_mkfs -> . atributos_mkfs atributosSolo_mkfs
    (28) atributos_mkfs -> . atributosSolo_mkfs
    (29) atributosSolo_mkfs -> . GUION ID STRING
    (30) atributosSolo_mkfs -> . GUION TYPE STRING

    GUION           shift and go to state 37

    atributos_mkfs                 shift and go to state 35
    atributosSolo_mkfs             shift and go to state 36

state 8

    (31) comando -> LOGIN . atributos_login
    (32) atributos_login -> . atributos_login atributosSolo_login
    (33) atributos_login -> . atributosSolo_login
    (34) atributosSolo_login -> . GUION USER STRING
    (35) atributosSolo_login -> . GUION PASS STRING
    (36) atributosSolo_login -> . GUION ID STRING

    GUION           shift and go to state 40

    atributos_login                shift and go to state 38
    atributosSolo_login            shift and go to state 39

state 9

    (37) comando -> LOGOUT .

    $end            reduce using rule 37 (comando -> LOGOUT .)


state 10

    (38) comando -> MKGRP . GUION NAME STRING

    GUION           shift and go to state 41


state 11

    (39) comando -> RMGRP . GUION NAME STRING

    GUION           shift and go to state 42


state 12

    (40) comando -> MKUSR . atributos_mkusr
    (41) atributos_mkusr -> . atributos_mkusr atributosSolo_mkusr
    (42) atributos_mkusr -> . atributosSolo_mkusr
    (43) atributosSolo_mkusr -> . GUION USER STRING
    (44) atributosSolo_mkusr -> . GUION PASS STRING
    (45) atributosSolo_mkusr -> . GUION GRP STRING

    GUION           shift and go to state 45

    atributos_mkusr                shift and go to state 43
    atributosSolo_mkusr            shift and go to state 44

state 13

    (46) comando -> RMUSR . GUION USER STRING

    GUION           shift and go to state 46


state 14

    (47) comando -> MKFILE . atributos_mkfile
    (48) atributos_mkfile -> . atributos_mkfile atributosSolo_mkfile
    (49) atributos_mkfile -> . atributosSolo_mkfile
    (50) atributosSolo_mkfile -> . GUION PATH DIR
    (51) atributosSolo_mkfile -> . GUION SIZE STRING
    (52) atributosSolo_mkfile -> . GUION CONT STRING
    (53) atributosSolo_mkfile -> . GUION R

    GUION           shift and go to state 49

    atributos_mkfile               shift and go to state 47
    atributosSolo_mkfile           shift and go to state 48

state 15

    (54) comando -> CAT . listaFilesCAT
    (55) listaFilesCAT -> . listaFilesCAT atributosSolo_CAT
    (56) listaFilesCAT -> . atributosSolo_CAT
    (57) atributosSolo_CAT -> . GUION FILE2 STRING
    (58) atributosSolo_CAT -> . GUION FILE1 STRING

    GUION           shift and go to state 52

    listaFilesCAT                  shift and go to state 50
    atributosSolo_CAT              shift and go to state 51

state 16

    (59) comando -> REMOVE . GUION PATH DIR

    GUION           shift and go to state 53


state 17

    (60) comando -> EDIT . listas_edit
    (61) listas_edit -> . listas_edit atributosSolo_EDIT
    (62) listas_edit -> . atributosSolo_EDIT
    (63) atributosSolo_EDIT -> . GUION PATH DIR
    (64) atributosSolo_EDIT -> . GUION CONT DIR

    GUION           shift and go to state 56

    listas_edit                    shift and go to state 54
    atributosSolo_EDIT             shift and go to state 55

state 18

    (65) comando -> RENAME . lista_rename
    (66) lista_rename -> . lista_rename atributosSolo_RENAME
    (67) lista_rename -> . atributosSolo_RENAME
    (68) atributosSolo_RENAME -> . GUION PATH DIR
    (69) atributosSolo_RENAME -> . GUION NAME STRING

    GUION           shift and go to state 59

    lista_rename                   shift and go to state 57
    atributosSolo_RENAME           shift and go to state 58

state 19

    (70) comando -> MKDIR . lista_mkdir
    (71) lista_mkdir -> . lista_mkdir atributosSolo_MKDIR
    (72) lista_mkdir -> . atributosSolo_MKDIR
    (73) atributosSolo_MKDIR -> . GUION PATH DIR
    (74) atributosSolo_MKDIR -> . GUION R

    GUION           shift and go to state 62

    lista_mkdir                    shift and go to state 60
    atributosSolo_MKDIR            shift and go to state 61

state 20

    (75) comando -> COPY . lista_copy
    (76) lista_copy -> . lista_copy atributosSolo_COPY
    (77) lista_copy -> . atributosSolo_COPY
    (78) atributosSolo_COPY -> . GUION PATH DIR
    (79) atributosSolo_COPY -> . GUION DESTINO DIR

    GUION           shift and go to state 65

    lista_copy                     shift and go to state 63
    atributosSolo_COPY             shift and go to state 64

state 21

    (80) comando -> EXECUTE . GUION PATH DIR

    GUION           shift and go to state 66


state 22

    (81) comando -> REP . lista_rep
    (82) lista_rep -> . lista_rep atributosSolo_REP
    (83) lista_rep -> . atributosSolo_REP
    (84) atributosSolo_REP -> . GUION ID STRING
    (85) atributosSolo_REP -> . GUION PATH DIR
    (86) atributosSolo_REP -> . GUION NAME STRING
    (87) atributosSolo_REP -> . GUION RUTA DIR

    GUION           shift and go to state 69

    lista_rep                      shift and go to state 67
    atributosSolo_REP              shift and go to state 68

state 23

    (88) comando -> PAUSE .

    $end            reduce using rule 88 (comando -> PAUSE .)


state 24

    (1) comando -> MKDISK atributosm .
    (2) atributosm -> atributosm . atributom
    (4) atributom -> . GUION PATH DIR
    (5) atributom -> . GUION FIT STRING
    (6) atributom -> . GUION UNIT STRING
    (7) atributom -> . GUION SIZE STRING

    $end            reduce using rule 1 (comando -> MKDISK atributosm .)
    GUION           shift and go to state 26

    atributom                      shift and go to state 70

state 25

    (3) atributosm -> atributom .

    GUION           reduce using rule 3 (atributosm -> atributom .)
    $end            reduce using rule 3 (atributosm -> atributom .)


state 26

    (4) atributom -> GUION . PATH DIR
    (5) atributom -> GUION . FIT STRING
    (6) atributom -> GUION . UNIT STRING
    (7) atributom -> GUION . SIZE STRING

    PATH            shift and go to state 71
    FIT             shift and go to state 72
    UNIT            shift and go to state 73
    SIZE            shift and go to state 74


state 27

    (8) comando -> FDISK atributos .
    (9) atributos -> atributos . atributo
    (11) atributo -> . GUION PATH DIR
    (12) atributo -> . GUION TYPE STRING
    (13) atributo -> . GUION UNIT STRING
    (14) atributo -> . GUION NAME STRING
    (15) atributo -> . GUION SIZE STRING
    (16) atributo -> . GUION FIT STRING
    (17) atributo -> . GUION ADD STRING
    (18) atributo -> . GUION DELETE

    $end            reduce using rule 8 (comando -> FDISK atributos .)
    GUION           shift and go to state 29

    atributo                       shift and go to state 75

state 28

    (10) atributos -> atributo .

    GUION           reduce using rule 10 (atributos -> atributo .)
    $end            reduce using rule 10 (atributos -> atributo .)


state 29

    (11) atributo -> GUION . PATH DIR
    (12) atributo -> GUION . TYPE STRING
    (13) atributo -> GUION . UNIT STRING
    (14) atributo -> GUION . NAME STRING
    (15) atributo -> GUION . SIZE STRING
    (16) atributo -> GUION . FIT STRING
    (17) atributo -> GUION . ADD STRING
    (18) atributo -> GUION . DELETE

    PATH            shift and go to state 76
    TYPE            shift and go to state 77
    UNIT            shift and go to state 78
    NAME            shift and go to state 79
    SIZE            shift and go to state 80
    FIT             shift and go to state 81
    ADD             shift and go to state 82
    DELETE          shift and go to state 83


state 30

    (19) comando -> RMDISK GUION . PATH DIR

    PATH            shift and go to state 84


state 31

    (20) comando -> MOUNT atributos_mount .
    (21) atributos_mount -> atributos_mount . atributo_mm
    (23) atributo_mm -> . GUION PATH DIR
    (24) atributo_mm -> . GUION NAME STRING

    $end            reduce using rule 20 (comando -> MOUNT atributos_mount .)
    GUION           shift and go to state 33

    atributo_mm                    shift and go to state 85

state 32

    (22) atributos_mount -> atributo_mm .

    GUION           reduce using rule 22 (atributos_mount -> atributo_mm .)
    $end            reduce using rule 22 (atributos_mount -> atributo_mm .)


state 33

    (23) atributo_mm -> GUION . PATH DIR
    (24) atributo_mm -> GUION . NAME STRING

    PATH            shift and go to state 86
    NAME            shift and go to state 87


state 34

    (25) comando -> UNMOUNT GUION . ID STRING

    ID              shift and go to state 88


state 35

    (26) comando -> MKFS atributos_mkfs .
    (27) atributos_mkfs -> atributos_mkfs . atributosSolo_mkfs
    (29) atributosSolo_mkfs -> . GUION ID STRING
    (30) atributosSolo_mkfs -> . GUION TYPE STRING

    $end            reduce using rule 26 (comando -> MKFS atributos_mkfs .)
    GUION           shift and go to state 37

    atributosSolo_mkfs             shift and go to state 89

state 36

    (28) atributos_mkfs -> atributosSolo_mkfs .

    GUION           reduce using rule 28 (atributos_mkfs -> atributosSolo_mkfs .)
    $end            reduce using rule 28 (atributos_mkfs -> atributosSolo_mkfs .)


state 37

    (29) atributosSolo_mkfs -> GUION . ID STRING
    (30) atributosSolo_mkfs -> GUION . TYPE STRING

    ID              shift and go to state 90
    TYPE            shift and go to state 91


state 38

    (31) comando -> LOGIN atributos_login .
    (32) atributos_login -> atributos_login . atributosSolo_login
    (34) atributosSolo_login -> . GUION USER STRING
    (35) atributosSolo_login -> . GUION PASS STRING
    (36) atributosSolo_login -> . GUION ID STRING

    $end            reduce using rule 31 (comando -> LOGIN atributos_login .)
    GUION           shift and go to state 40

    atributosSolo_login            shift and go to state 92

state 39

    (33) atributos_login -> atributosSolo_login .

    GUION           reduce using rule 33 (atributos_login -> atributosSolo_login .)
    $end            reduce using rule 33 (atributos_login -> atributosSolo_login .)


state 40

    (34) atributosSolo_login -> GUION . USER STRING
    (35) atributosSolo_login -> GUION . PASS STRING
    (36) atributosSolo_login -> GUION . ID STRING

    USER            shift and go to state 93
    PASS            shift and go to state 94
    ID              shift and go to state 95


state 41

    (38) comando -> MKGRP GUION . NAME STRING

    NAME            shift and go to state 96


state 42

    (39) comando -> RMGRP GUION . NAME STRING

    NAME            shift and go to state 97


state 43

    (40) comando -> MKUSR atributos_mkusr .
    (41) atributos_mkusr -> atributos_mkusr . atributosSolo_mkusr
    (43) atributosSolo_mkusr -> . GUION USER STRING
    (44) atributosSolo_mkusr -> . GUION PASS STRING
    (45) atributosSolo_mkusr -> . GUION GRP STRING

    $end            reduce using rule 40 (comando -> MKUSR atributos_mkusr .)
    GUION           shift and go to state 45

    atributosSolo_mkusr            shift and go to state 98

state 44

    (42) atributos_mkusr -> atributosSolo_mkusr .

    GUION           reduce using rule 42 (atributos_mkusr -> atributosSolo_mkusr .)
    $end            reduce using rule 42 (atributos_mkusr -> atributosSolo_mkusr .)


state 45

    (43) atributosSolo_mkusr -> GUION . USER STRING
    (44) atributosSolo_mkusr -> GUION . PASS STRING
    (45) atributosSolo_mkusr -> GUION . GRP STRING

    USER            shift and go to state 99
    PASS            shift and go to state 100
    GRP             shift and go to state 101


state 46

    (46) comando -> RMUSR GUION . USER STRING

    USER            shift and go to state 102


state 47

    (47) comando -> MKFILE atributos_mkfile .
    (48) atributos_mkfile -> atributos_mkfile . atributosSolo_mkfile
    (50) atributosSolo_mkfile -> . GUION PATH DIR
    (51) atributosSolo_mkfile -> . GUION SIZE STRING
    (52) atributosSolo_mkfile -> . GUION CONT STRING
    (53) atributosSolo_mkfile -> . GUION R

    $end            reduce using rule 47 (comando -> MKFILE atributos_mkfile .)
    GUION           shift and go to state 49

    atributosSolo_mkfile           shift and go to state 103

state 48

    (49) atributos_mkfile -> atributosSolo_mkfile .

    GUION           reduce using rule 49 (atributos_mkfile -> atributosSolo_mkfile .)
    $end            reduce using rule 49 (atributos_mkfile -> atributosSolo_mkfile .)


state 49

    (50) atributosSolo_mkfile -> GUION . PATH DIR
    (51) atributosSolo_mkfile -> GUION . SIZE STRING
    (52) atributosSolo_mkfile -> GUION . CONT STRING
    (53) atributosSolo_mkfile -> GUION . R

    PATH            shift and go to state 104
    SIZE            shift and go to state 105
    CONT            shift and go to state 106
    R               shift and go to state 107


state 50

    (54) comando -> CAT listaFilesCAT .
    (55) listaFilesCAT -> listaFilesCAT . atributosSolo_CAT
    (57) atributosSolo_CAT -> . GUION FILE2 STRING
    (58) atributosSolo_CAT -> . GUION FILE1 STRING

    $end            reduce using rule 54 (comando -> CAT listaFilesCAT .)
    GUION           shift and go to state 52

    atributosSolo_CAT              shift and go to state 108

state 51

    (56) listaFilesCAT -> atributosSolo_CAT .

    GUION           reduce using rule 56 (listaFilesCAT -> atributosSolo_CAT .)
    $end            reduce using rule 56 (listaFilesCAT -> atributosSolo_CAT .)


state 52

    (57) atributosSolo_CAT -> GUION . FILE2 STRING
    (58) atributosSolo_CAT -> GUION . FILE1 STRING

    FILE2           shift and go to state 109
    FILE1           shift and go to state 110


state 53

    (59) comando -> REMOVE GUION . PATH DIR

    PATH            shift and go to state 111


state 54

    (60) comando -> EDIT listas_edit .
    (61) listas_edit -> listas_edit . atributosSolo_EDIT
    (63) atributosSolo_EDIT -> . GUION PATH DIR
    (64) atributosSolo_EDIT -> . GUION CONT DIR

    $end            reduce using rule 60 (comando -> EDIT listas_edit .)
    GUION           shift and go to state 56

    atributosSolo_EDIT             shift and go to state 112

state 55

    (62) listas_edit -> atributosSolo_EDIT .

    GUION           reduce using rule 62 (listas_edit -> atributosSolo_EDIT .)
    $end            reduce using rule 62 (listas_edit -> atributosSolo_EDIT .)


state 56

    (63) atributosSolo_EDIT -> GUION . PATH DIR
    (64) atributosSolo_EDIT -> GUION . CONT DIR

    PATH            shift and go to state 113
    CONT            shift and go to state 114


state 57

    (65) comando -> RENAME lista_rename .
    (66) lista_rename -> lista_rename . atributosSolo_RENAME
    (68) atributosSolo_RENAME -> . GUION PATH DIR
    (69) atributosSolo_RENAME -> . GUION NAME STRING

    $end            reduce using rule 65 (comando -> RENAME lista_rename .)
    GUION           shift and go to state 59

    atributosSolo_RENAME           shift and go to state 115

state 58

    (67) lista_rename -> atributosSolo_RENAME .

    GUION           reduce using rule 67 (lista_rename -> atributosSolo_RENAME .)
    $end            reduce using rule 67 (lista_rename -> atributosSolo_RENAME .)


state 59

    (68) atributosSolo_RENAME -> GUION . PATH DIR
    (69) atributosSolo_RENAME -> GUION . NAME STRING

    PATH            shift and go to state 116
    NAME            shift and go to state 117


state 60

    (70) comando -> MKDIR lista_mkdir .
    (71) lista_mkdir -> lista_mkdir . atributosSolo_MKDIR
    (73) atributosSolo_MKDIR -> . GUION PATH DIR
    (74) atributosSolo_MKDIR -> . GUION R

    $end            reduce using rule 70 (comando -> MKDIR lista_mkdir .)
    GUION           shift and go to state 62

    atributosSolo_MKDIR            shift and go to state 118

state 61

    (72) lista_mkdir -> atributosSolo_MKDIR .

    GUION           reduce using rule 72 (lista_mkdir -> atributosSolo_MKDIR .)
    $end            reduce using rule 72 (lista_mkdir -> atributosSolo_MKDIR .)


state 62

    (73) atributosSolo_MKDIR -> GUION . PATH DIR
    (74) atributosSolo_MKDIR -> GUION . R

    PATH            shift and go to state 119
    R               shift and go to state 120


state 63

    (75) comando -> COPY lista_copy .
    (76) lista_copy -> lista_copy . atributosSolo_COPY
    (78) atributosSolo_COPY -> . GUION PATH DIR
    (79) atributosSolo_COPY -> . GUION DESTINO DIR

    $end            reduce using rule 75 (comando -> COPY lista_copy .)
    GUION           shift and go to state 65

    atributosSolo_COPY             shift and go to state 121

state 64

    (77) lista_copy -> atributosSolo_COPY .

    GUION           reduce using rule 77 (lista_copy -> atributosSolo_COPY .)
    $end            reduce using rule 77 (lista_copy -> atributosSolo_COPY .)


state 65

    (78) atributosSolo_COPY -> GUION . PATH DIR
    (79) atributosSolo_COPY -> GUION . DESTINO DIR

    PATH            shift and go to state 122
    DESTINO         shift and go to state 123


state 66

    (80) comando -> EXECUTE GUION . PATH DIR

    PATH            shift and go to state 124


state 67

    (81) comando -> REP lista_rep .
    (82) lista_rep -> lista_rep . atributosSolo_REP
    (84) atributosSolo_REP -> . GUION ID STRING
    (85) atributosSolo_REP -> . GUION PATH DIR
    (86) atributosSolo_REP -> . GUION NAME STRING
    (87) atributosSolo_REP -> . GUION RUTA DIR

    $end            reduce using rule 81 (comando -> REP lista_rep .)
    GUION           shift and go to state 69

    atributosSolo_REP              shift and go to state 125

state 68

    (83) lista_rep -> atributosSolo_REP .

    GUION           reduce using rule 83 (lista_rep -> atributosSolo_REP .)
    $end            reduce using rule 83 (lista_rep -> atributosSolo_REP .)


state 69

    (84) atributosSolo_REP -> GUION . ID STRING
    (85) atributosSolo_REP -> GUION . PATH DIR
    (86) atributosSolo_REP -> GUION . NAME STRING
    (87) atributosSolo_REP -> GUION . RUTA DIR

    ID              shift and go to state 126
    PATH            shift and go to state 127
    NAME            shift and go to state 128
    RUTA            shift and go to state 129


state 70

    (2) atributosm -> atributosm atributom .

    GUION           reduce using rule 2 (atributosm -> atributosm atributom .)
    $end            reduce using rule 2 (atributosm -> atributosm atributom .)


state 71

    (4) atributom -> GUION PATH . DIR

    DIR             shift and go to state 130


state 72

    (5) atributom -> GUION FIT . STRING

    STRING          shift and go to state 131


state 73

    (6) atributom -> GUION UNIT . STRING

    STRING          shift and go to state 132


state 74

    (7) atributom -> GUION SIZE . STRING

    STRING          shift and go to state 133


state 75

    (9) atributos -> atributos atributo .

    GUION           reduce using rule 9 (atributos -> atributos atributo .)
    $end            reduce using rule 9 (atributos -> atributos atributo .)


state 76

    (11) atributo -> GUION PATH . DIR

    DIR             shift and go to state 134


state 77

    (12) atributo -> GUION TYPE . STRING

    STRING          shift and go to state 135


state 78

    (13) atributo -> GUION UNIT . STRING

    STRING          shift and go to state 136


state 79

    (14) atributo -> GUION NAME . STRING

    STRING          shift and go to state 137


state 80

    (15) atributo -> GUION SIZE . STRING

    STRING          shift and go to state 138


state 81

    (16) atributo -> GUION FIT . STRING

    STRING          shift and go to state 139


state 82

    (17) atributo -> GUION ADD . STRING

    STRING          shift and go to state 140


state 83

    (18) atributo -> GUION DELETE .

    GUION           reduce using rule 18 (atributo -> GUION DELETE .)
    $end            reduce using rule 18 (atributo -> GUION DELETE .)


state 84

    (19) comando -> RMDISK GUION PATH . DIR

    DIR             shift and go to state 141


state 85

    (21) atributos_mount -> atributos_mount atributo_mm .

    GUION           reduce using rule 21 (atributos_mount -> atributos_mount atributo_mm .)
    $end            reduce using rule 21 (atributos_mount -> atributos_mount atributo_mm .)


state 86

    (23) atributo_mm -> GUION PATH . DIR

    DIR             shift and go to state 142


state 87

    (24) atributo_mm -> GUION NAME . STRING

    STRING          shift and go to state 143


state 88

    (25) comando -> UNMOUNT GUION ID . STRING

    STRING          shift and go to state 144


state 89

    (27) atributos_mkfs -> atributos_mkfs atributosSolo_mkfs .

    GUION           reduce using rule 27 (atributos_mkfs -> atributos_mkfs atributosSolo_mkfs .)
    $end            reduce using rule 27 (atributos_mkfs -> atributos_mkfs atributosSolo_mkfs .)


state 90

    (29) atributosSolo_mkfs -> GUION ID . STRING

    STRING          shift and go to state 145


state 91

    (30) atributosSolo_mkfs -> GUION TYPE . STRING

    STRING          shift and go to state 146


state 92

    (32) atributos_login -> atributos_login atributosSolo_login .

    GUION           reduce using rule 32 (atributos_login -> atributos_login atributosSolo_login .)
    $end            reduce using rule 32 (atributos_login -> atributos_login atributosSolo_login .)


state 93

    (34) atributosSolo_login -> GUION USER . STRING

    STRING          shift and go to state 147


state 94

    (35) atributosSolo_login -> GUION PASS . STRING

    STRING          shift and go to state 148


state 95

    (36) atributosSolo_login -> GUION ID . STRING

    STRING          shift and go to state 149


state 96

    (38) comando -> MKGRP GUION NAME . STRING

    STRING          shift and go to state 150


state 97

    (39) comando -> RMGRP GUION NAME . STRING

    STRING          shift and go to state 151


state 98

    (41) atributos_mkusr -> atributos_mkusr atributosSolo_mkusr .

    GUION           reduce using rule 41 (atributos_mkusr -> atributos_mkusr atributosSolo_mkusr .)
    $end            reduce using rule 41 (atributos_mkusr -> atributos_mkusr atributosSolo_mkusr .)


state 99
